--- a/AES/AES.vcxproj
+++ b/AES/AES.vcxproj
@@ -129,10 +129,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\AES\AES.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\AES\AES.h" />
     <ClInclude Include="src\common\helpers.h" />
+    <ClInclude Include="src\common\sbox.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
