--- a/AES/AES.vcxproj
+++ b/AES/AES.vcxproj
@@ -135,7 +135,7 @@
   <ItemGroup>
     <ClInclude Include="src\AES\AES.h" />
     <ClInclude Include="src\common\helpers.h" />
-    <ClInclude Include="src\common\sbox.h" />
+    <ClInclude Include="src\common\constants.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
